--- a/indexpage.html
+++ b/indexpage.html
@@ -10,8 +10,8 @@
   <h1>Welcome to SD Portal</h1>
   <h2>Web Site Main Ingredients:</h2>
 
-  <p>Pages (HTML)</p>
-  <p>Learn how to connect VS code with Github</p>
+  <p>vdhvjdvwjecjwe c </p>
+  <p>Lgrknvkenkn</p>
   
 
 </body>
