--- a/indexpage.html
+++ b/indexpage.html
@@ -10,8 +10,8 @@
   <h1>Welcome to SD Portal</h1>
   <h2>Web Site Main Ingredients:</h2>
 
-  <p>vdhvjdvwjecjwe c </p>
-  <p>Lgrknvkenkn</p>
+  <p>This is 2nd file commit</p>
+  <p>Date:04-02-22</p>
   
 
 </body>
